-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 16
-
Component/s: hotspot
-
b26
-
aarch64
-
linux
Test script aarch64-asmtest.py may generate undefined register r18.
Error message:
Creating javadoc element list
/home/dongbo/jdk/src/hotspot/cpu/aarch64/assembler_aarch64.cpp: In function 'void entry(CodeBuffer*)':
/home/dongbo/jdk/src/hotspot/cpu/aarch64/assembler_aarch64.cpp:580:37: error: 'r18' was not declared in this scope; did you mean 'z18'?
580 | __ ldp(r28, r22, Address(__ pre(r18, 16))); // ldp x28, x22, [x18, #16]!
| ^~~
| z18
gmake[3]: *** [lib/CompileJvm.gmk:143: /home/dongbo/jdk/build/linux-aarch64-server-fastdebug/hotspot/variant-server/libjvm/objs/assembler_aarch64.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
Compiling 89 properties into resource bundles for java.desktop
Error message:
Creating javadoc element list
/home/dongbo/jdk/src/hotspot/cpu/aarch64/assembler_aarch64.cpp: In function 'void entry(CodeBuffer*)':
/home/dongbo/jdk/src/hotspot/cpu/aarch64/assembler_aarch64.cpp:580:37: error: 'r18' was not declared in this scope; did you mean 'z18'?
580 | __ ldp(r28, r22, Address(__ pre(r18, 16))); // ldp x28, x22, [x18, #16]!
| ^~~
| z18
gmake[3]: *** [lib/CompileJvm.gmk:143: /home/dongbo/jdk/build/linux-aarch64-server-fastdebug/hotspot/variant-server/libjvm/objs/assembler_aarch64.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
Compiling 89 properties into resource bundles for java.desktop