8256375: AArch64: aarch64-asmtest.py may generate undefined register r18

Reviewed-by: aph